<resources>
    <string name="app_name">LMX</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="icon_check">\uf121</string>
    <string name="icon_home">\uf144</string>
    <string name="icon_close">\uf404</string>
    <string name="icon_box">\uf3ec</string>
    <string name="icon_gift">\uf06b</string>


    <!--font Awesome-->
    <string name="icon_user">\uf007</string>
    <string name="icon_email">\uf003</string>
    <string name="icon_address">\uf041</string>
    <string name="icon_phone">\uf095</string>
    <string name="icon_edit">\uf040</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="distance_unit">
        <item>cm</item>
        <item>inch</item>
    </string-array>

    <string-array name="weight_unit">
        <item>kg</item>
        <item>lb</item>
    </string-array>

    <string-array name="category_array">
        <item>Regular</item>
        <item>Luxury</item>
        <item>Cosmetics</item>
        <item>Document</item>
    </string-array>

    <string-array name="dropoff_country_array">
        <item>Canada</item>
        <item>China</item>
    </string-array>

    <string-array name="time_interval_array">
        <item>9am - 11am</item>
        <item>11am - 1pm</item>
        <item>1pm - 3pm</item>
        <item>3pm - 6pm</item>
    </string-array>
    <string name="title_activity_select_product">Select a Service</string>

    <string name="contact_support">Contact Support</string>

    <string name="verify">Verify</string>
    <string name="save">Save</string>

    <string name="err_connection">Cannot connect to server, please check you network or try again later</string>

    <string name="loading">Loading</string>

    <string name="no_shipping">Welcome to LMX!\nPlease click the + button below to ship a new package</string>
    <string name="account_activated">Welcome to LM Delivery!</string>
    <string name="track_package">Track Package</string>
    <string name="send_name">Sender\'s name</string>
    <string name="sender_phone">Sender\'s Phone Number</string>
    <string name="receiver_phone">Receiver\'s Phone number</string>
    <string name="receiver_name">Receiver\'s name</string>
    <string name="est_value">Estimate Value (optional)</string>
    <string name="estimate_value">Estimate Value: </string>
    <string name="insurance_value">Insurance Value: </string>
    <string name="insurance_price">Insurance Price: </string>
    <string name="buy_insurance">Buy Insurance</string>
    <string name="insurance">Insurance</string>

    <string name="dollar_sign">$</string>
    <string name="zero_CAD">0 CAD</string>
    <string name="pickup_sub_title">We will pick up your packages from this address</string>
    <string name="insurance_value_invalid">Insurance value is invalid</string>
    <string name="category">"Category: "</string>
    <string name="insurance_cost">"Insurance Cost:"</string>
    <string name="insurance_decline">Insurance Declined</string>
    <string name="country">Country</string>
    <string name="own_box">I have my own box</string>
    <string name="err_no_estimate">Sorry! We cannot get any estimation. Please chagne your shipping address or try again later</string>

    <string name="confirm">Confirm Shipment</string>
    <string name="estimate_delivery">Estimate Delivery:\n</string>
    <string name="action_same_city">Same City Test</string>
    <string name="action_diff_city">Different City Test</string>
    <string name="invalid_country">Invalid country</string>
    <string name="fastest">Fastest</string>
    <string name="medium">Medium</string>
    <string name="economy">Economy</string>

    <string name="passwrod_update_success">Password updated successfully\nPlease login again</string>
    <string name="insurance_value_sub_label">The amount we pay if package lost</string>
    <string name="max_1000">Maximum $1000</string>
    <string name="packaging">Packaging</string>
    <string name="tax">Tax</string>
    <string name="shipping">Shipping</string>
    <string name="cannot_be_negative">Cannot be negative</string>
    <string name="invalid_number">Invalid number</string>
    <string name="declare_value_too_big">Declare value too large</string>
    <string name="unknown">UNKNOWN</string>
    <string name="total">Total</string>
    <string name="register_before_book">Please register/sign in before making a booking</string>
    <string name="login_success">Login success</string>
    <string name="verify_again">Please verify your phone number</string>
    <string name="book_success">Your shipment was booked successfully.</string>
    <string name="logout_confirm">Are you sure that you want to logout from:\n%1$s</string>
    <string name="logout_success">Successfully logged out</string>
    <string name="no_tracking_number">Tracking number not available yet</string>
    <string name="title_activity_track_detail">Tracking Detail</string>
    <string name="id">ID</string>
    <string name="order_date">Order date</string>
    <string name="cost">Total cost</string>
    <string name="package_name">Package</string>
    <string name="status">Status</string>
    <string name="location">Location</string>
    <string name="tracking_number">Tracking #</string>
    <string name="not_available">Not available</string>
    <string name="fail_to_open_browser">Failed to open browser</string>
    <string name="pickup_date">Pickup Date</string>
    <string name="for_import_tax">For import tax calculation</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="no_tracking_found">No booking found</string>
    <string name="please_sign_in_first">Please sign in first in order to see your tracking here</string>
    <string name="transition_icon">transition_icon</string>
    <string name="transition_title">transition_title</string>
    <string name="size">Size</string>
    <string name="package_format">%1$s x %2$s x %3$s</string>
    <string name="shipment_format">\n</string>
    <string name="price_format">$ %1$s</string>
    <string name="final_cost">Final cost</string>
    <string name="permission_read_contact_reason">LMX would like to read your email address to help you register faster</string>
</resources>
