<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:minHeight="104dp"
    android:orientation="vertical"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="104dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="8dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_carrier_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textSize="18sp"
                tools:text="UPS Untra Express" />

            <TextView
                android:id="@+id/tv_est_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:textSize="16sp"
                tools:text="Estimate delivery:\nTue, 31 Aug, 2015" />

        </LinearLayout>

        <!--<TextView-->
            <!--android:id="@+id/tv_price"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="match_parent"-->
            <!--android:gravity="center"-->
            <!--android:textColor="@color/price"-->
            <!--android:textSize="24sp"-->
            <!--tools:text="$50.56" />-->


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                style="@style/Label.Gray"
                android:layout_alignParentStart="true"
                android:text="@string/shipping" />

            <TextView
                android:id="@+id/tv_ship_price"
                style="@style/Label.Price"
                android:layout_alignParentEnd="true"
                tools:text="$ 11.4" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha=".1"
            android:background="@android:color/black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                style="@style/Label.Gray"
                android:layout_alignParentStart="true"
                android:text="@string/packaging" />

            <TextView
                android:id="@+id/tv_package_price"
                style="@style/Label.Price"
                android:layout_alignParentEnd="true"
                tools:text="$ 11.4" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha=".1"
            android:background="@android:color/black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                style="@style/Label.Gray"
                android:layout_alignParentStart="true"
                android:text="@string/insurance" />

            <TextView
                android:id="@+id/tv_insurance_price"
                style="@style/Label.Price"
                android:layout_alignParentEnd="true"
                tools:text="$ 11.4" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha=".1"
            android:background="@android:color/black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                style="@style/Label.Gray"
                android:layout_alignParentStart="true"
                android:text="@string/tax" />

            <TextView
                android:id="@+id/tv_tax_price"
                style="@style/Label.Price"
                android:layout_alignParentEnd="true"
                tools:text="$ 11.4" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha=".1"
            android:background="@android:color/black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                style="@style/Label.Gray"
                android:layout_alignParentStart="true"
                android:text="@string/total" />

            <TextView
                android:id="@+id/tv_total_price"
                style="@style/Label.Price"
                android:textStyle="bold"
                android:layout_alignParentEnd="true"
                tools:text="$ 11.45" />
        </RelativeLayout>

    </LinearLayout>


</LinearLayout>