<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="trackDetail"
            type="lmdelivery.longmen.com.android.data.TrackingDetail" />
    </data>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="lmdelivery.longmen.com.android.activity.TrackDetailActivity">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <ImageView
                android:id="@+id/iv_ship_icon"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentEnd="true"
                android:transitionName="@string/transition_icon"
                app:imageUrl="@{trackDetail.service_icon_url}" />

            <TextView
                android:id="@+id/tv_carrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:textColor="@color/white_text"
                android:textSize="16sp"
                android:transitionName="@string/transition_title"
                tools:text="Title" />

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white_text"
                android:textSize="12sp"
                tools:text="Sub Title" />


        </android.support.v7.widget.Toolbar>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <include
                    layout="@layout/fragment_lite_map"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/map_result_height" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal">


                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal">

                        <TextView
                            android:id="@+id/from"
                            style="@style/PackageItem.Label"
                            android:layout_width="match_parent"
                            android:gravity="center"
                            android:text="@string/ship_from" />

                        <TextView
                            android:id="@+id/tv_from"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_below="@+id/from"
                            android:gravity="center"
                            android:text="@{trackDetail.fromAddress.buildFullAddress()}"
                            tools:text="11920 Forge Pl\nRichmond\nasb" />
                    </RelativeLayout>


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_send_24dp" />

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal">

                        <TextView
                            android:id="@+id/to"
                            style="@style/PackageItem.Label"
                            android:layout_width="match_parent"
                            android:gravity="center"
                            android:text="@string/ship_to" />

                        <TextView
                            android:id="@+id/tv_to"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_below="@id/to"
                            android:gravity="center"
                            android:text="@{trackDetail.toAddress.buildFullAddress()}"
                            tools:text="7362 Elmbridge Way\nRichmond" />
                    </RelativeLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha=".1"
                    android:background="@android:color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/tracking_detail_padding">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/ic_schedule_24dp" />

                    <TextView
                        style="@style/Track.Label"
                        android:layout_marginEnd="8dp"
                        android:text="@string/order_date" />

                    <TextView
                        android:id="@+id/tv_order_date"
                        style="@style/Track.content"
                        android:text="@{trackDetail.orderDate.toString()}"
                        tools:text="Jun 6, 2014" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha=".1"
                    android:background="@android:color/black" />


                <LinearLayout
                    android:id="@+id/ll_package"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>

                <!--<View-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="1dp"-->
                    <!--android:alpha=".1"-->
                    <!--android:background="@android:color/black" />-->

                <!--<RelativeLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:padding="@dimen/tracking_detail_padding">-->

                    <!--<TextView-->
                        <!--style="@style/Track.Label"-->
                        <!--android:text="@string/id" />-->

                    <!--<TextView-->
                        <!--android:id="@+id/tv_id"-->
                        <!--style="@style/Track.content"-->
                        <!--android:text='@{String.format("%.1f",trackDetail.estimateCost)}'-->
                        <!--tools:text="123" />-->
                <!--</RelativeLayout>-->


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha=".1"
                    android:background="@android:color/black" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/tracking_detail_padding">

                    <TextView
                        style="@style/Track.Label"
                        android:text="@string/pickup_date" />

                    <TextView
                        android:id="@+id/tv_pickup_date"
                        style="@style/Track.content"
                        tools:text="12:00AM - 2:00PM\nJun 14, 2015" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha=".1"
                    android:background="@android:color/black" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/tracking_detail_padding">

                    <TextView
                        style="@style/Track.Label"
                        android:text="@string/insurance" />

                    <TextView
                        android:id="@+id/tv_insurance"
                        style="@style/Track.content"
                        tools:text="$300" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:alpha=".1"
                    android:background="@android:color/black" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/tracking_detail_padding">

                    <TextView
                        style="@style/Track.Label"
                        android:text="@string/cost" />

                    <TextView
                        android:id="@+id/tv_cost"
                        style="@style/Track.content"
                        tools:text="$12.56" />
                </RelativeLayout>


            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>


    </LinearLayout>
</layout>